--- a/package.json
+++ b/package.json
@@ -16,14 +16,22 @@
   },
   "homepage": "https://github.com/anton-g/curatedcontrols#readme",
   "devDependencies": {
+    "concat": "^1.0.0",
     "del": "^2.0.2",
+    "glob": "^5.0.15",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.2",
     "gulp-bytediff": "^1.0.0",
+    "gulp-cache": "^0.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-inject": "^3.0.0",
     "gulp-jshint": "^1.11.2",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-uglify": "^1.4.1",
-    "jshint-stylish": "^2.0.1"
+    "jshint-stylish": "^2.0.1",
+    "plato": "^1.5.0"
   }
 }
