--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-task-listing": "^1.0.1",
     "gulp-uglify": "^1.4.1",
     "jshint-stylish": "^2.0.1",
     "plato": "^1.5.0"
