--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "del": "^2.0.2",
     "glob": "^5.0.15",
     "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.7.0",
     "gulp-autoprefixer": "^3.0.2",
     "gulp-bytediff": "^1.0.0",
     "gulp-cache": "^0.3.0",
@@ -29,6 +30,7 @@
     "gulp-jshint": "^1.11.2",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-task-listing": "^1.0.1",
     "gulp-uglify": "^1.4.1",
